--- a/views/home/index.html
+++ b/views/home/index.html
@@ -39,11 +39,11 @@
     <div class="container mg-tp-50 mg-bt-50">
         <div class="row">
             <div class="col-xs-4 home_pkg_wrapper">
-                <div class="home_pkg active">
+                <div class="home_pkg">
                     <div class="home_pkg__pnl">
                         <a href="">
                             <h3 class="home_pkg__title">
-                                佛教雕塑艺术资源包
+                                佛教雕塑艺术
                             </h3>
                             <p class="home_pkg__enter">
                                 <i class="fa fa-hand-o-right"></i>
@@ -56,9 +56,16 @@
             </div>
 
             <div class="col-xs-4 home_pkg_wrapper">
-                <div class="home_pkg active">
+                <div class="home_pkg">
                     <div class="home_pkg__pnl">
                         <a href="">
+                            <h3 class="home_pkg__title">
+                                云贵川甘多民族传统汉服
+                            </h3>
+                            <p class="home_pkg__enter">
+                                <i class="fa fa-hand-o-right"></i>
+                                进入
+                            </p>
                             <img src="/images/home/pkg-1.jpg" alt="">
                         </a>
                     </div>
@@ -66,9 +73,16 @@
             </div>
 
             <div class="col-xs-4 home_pkg_wrapper">
-                <div class="home_pkg active">
+                <div class="home_pkg">
                     <div class="home_pkg__pnl">
                         <a href="">
+                            <h3 class="home_pkg__title">
+                                丝绸之路图像艺术
+                            </h3>
+                            <p class="home_pkg__enter">
+                                <i class="fa fa-hand-o-right"></i>
+                                进入
+                            </p>
                             <img src="/images/home/pkg-1.jpg" alt="">
                         </a>
                     </div>
@@ -79,12 +93,16 @@
         <div class="row">
             <div class="home_pkg_line"></div>
             <div class="col-xs-4 col-xs-offset-2 home_pkg_wrapper">
-                <div class="home_pkg reverse active">
+                <div class="home_pkg reverse">
                     <div class="home_pkg__pnl">
                         <a href="">
                             <h3 class="home_pkg__title">
-                                佛教雕塑艺术资源包
+                                云贵川甘多民族传统汉服
                             </h3>
+                            <p class="home_pkg__enter">
+                                <i class="fa fa-hand-o-right"></i>
+                                进入
+                            </p>
                             <img src="/images/home/pkg-1.jpg" alt="">
                         </a>
                     </div>
@@ -92,9 +110,16 @@
             </div>
 
             <div class="col-xs-4 home_pkg_wrapper">
-                <div class="home_pkg reverse active">
+                <div class="home_pkg reverse">
                     <div class="home_pkg__pnl">
                         <a href="">
+                            <h3 class="home_pkg__title">
+                                云贵川甘多民族传统汉服
+                            </h3>
+                            <p class="home_pkg__enter">
+                                <i class="fa fa-hand-o-right"></i>
+                                进入
+                            </p>
                             <img src="/images/home/pkg-1.jpg" alt="">
                         </a>
                     </div>
