--- a/public/styles/home/_index.scss
+++ b/public/styles/home/_index.scss
@@ -58,9 +58,10 @@
     }
 
     @include e(navbar) {
-        margin-top: 30px;
-        margin-bottom: 30px;
+        padding-top: 30px;
+        padding-bottom: 30px;
         font-size: 0;
+        @include transition(all 0.5s ease);
 
         > a {
             display: inline-block;
@@ -78,6 +79,17 @@
 
         > a:last-child {
             margin-right: 0;
+        }
+
+        &.fixed {
+            position: fixed;
+            top: 0;
+            left: 0;
+            z-index: $zindex-navbar;
+            width: 100%;
+            padding-top: 10px;
+            padding-bottom: 10px;
+            background-color: #fff;
         }
     }
 }
@@ -108,7 +120,8 @@
     @include transform-origin(50%, 100%);
     
     &.active {    
-        @include rotateX(90deg);
+        @include rotateX(180deg);
+        @include opacity(0);
     }
     
     &.reverse {
@@ -190,7 +203,7 @@
         top: 100px;
         left: 35px;
         right: 35px;
-        z-index: 100;
+        z-index: 1;
         margin: 0;
         text-align: center;
         font-size: 20px;
@@ -202,6 +215,9 @@
         @extend .home_pkg__title;
         top: 150px;
         font-size: 14px;
+        &:hover {
+            text-decoration: underline;
+        }
     }
 }
 
