MOD: 通用主题包首页

--- a/public/styles/common/_variables.scss
+++ b/public/styles/common/_variables.scss
@@ -59,6 +59,7 @@ $font-path-base:             "../fonts/";
 
 //== Background image path
 $image-path-base:            "../images/";
+$image-path-pkg:            "../images/package/";
 
 
 //== Grid system
