--- a/views/package/common.html
+++ b/views/package/common.html
@@ -1,36 +1,67 @@
 <div class="pkg">
+    <div class="fixed_wrapper"></div>
+    <div class="pkg__navbar">
+        <div class="container">
+            <a href="/">
+                <i class="fa fa-home"></i>
+                首页
+            </a>
+
+            <h3>佛教雕塑艺术资源包</h3>
+        </div>
+    </div>
     <div class="container">
-        <div class="row">
-            <div class="col-xs-3">
-                <div class="pkg_menu_pnl active">
-                    <a href="">
-                        <img src="/images/package/pkg-1.jpg" alt="" class="pkg_menu_pnl__img">
-                    </a>
-                </div>
+        
+        <div class="pkg_menu_row">
+            <div class="pkg_menu_pnl active">
+                <a href="">
+                    <h4 class="pkg_menu_pnl__title">
+                        主题资源包第一级菜单
+                    </h4>
+                    <span class="pkg_menu_pnl__enter">
+                        <i class="fa fa-hand-o-right"></i>
+                        点击进入
+                    </span>
+                    <img src="/images/package/menu-1.jpg" alt="" class="pkg_menu_pnl__img">
+                </a>
             </div>
-
-            <div class="col-xs-3">
-                <div class="pkg_menu_pnl active">
-                    <a href="">
-                        <img src="/images/package/pkg-1.jpg" alt="" class="pkg_menu_pnl__img">
-                    </a>
-                </div>
+            <div class="pkg_menu_pnl active">
+                <a href="">
+                    <img src="/images/package/menu-1.jpg" alt="" class="pkg_menu_pnl__img">
+                </a>
             </div>
-
-            <div class="col-xs-3">
-                <div class="pkg_menu_pnl active">
-                    <a href="">
-                        <img src="/images/package/pkg-1.jpg" alt="" class="pkg_menu_pnl__img">
-                    </a>
-                </div>
+            <div class="pkg_menu_pnl active">
+                <a href="">
+                    <img src="/images/package/menu-1.jpg" alt="" class="pkg_menu_pnl__img">
+                </a>
             </div>
+            <div class="pkg_menu_pnl active">
+                <a href="">
+                    <img src="/images/package/menu-1.jpg" alt="" class="pkg_menu_pnl__img">
+                </a>
+            </div>
+        </div>
 
-            <div class="col-xs-3">
-                <div class="pkg_menu_pnl active">
-                    <a href="">
-                        <img src="/images/package/pkg-1.jpg" alt="" class="pkg_menu_pnl__img">
-                    </a>
-                </div>
+        <div class="pkg_menu_row">
+            <div class="pkg_menu_pnl active">
+                <a href="">
+                    <img src="/images/package/menu-1.jpg" alt="" class="pkg_menu_pnl__img">
+                </a>
+            </div>
+            <div class="pkg_menu_pnl active">
+                <a href="">
+                    <img src="/images/package/menu-1.jpg" alt="" class="pkg_menu_pnl__img">
+                </a>
+            </div>
+            <div class="pkg_menu_pnl active">
+                <a href="">
+                    <img src="/images/package/menu-1.jpg" alt="" class="pkg_menu_pnl__img">
+                </a>
+            </div>
+            <div class="pkg_menu_pnl active">
+                <a href="">
+                    <img src="/images/package/menu-1.jpg" alt="" class="pkg_menu_pnl__img">
+                </a>
             </div>
         </div>
     </div>
