--- a/public/styles/common/_utilities.scss
+++ b/public/styles/common/_utilities.scss
@@ -231,3 +231,19 @@
     text-overflow: ellipsis;
     overflow: hidden;
 }
+
+.fixed_wrapper {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: -1;
+
+    background-image: url($image-path-base + "bg.jpg");
+    background-position-x: 50%;
+    background-position-y: 0;
+    background-repeat: no-repeat;
+
+    @include transition(all 0.5s ease);
+}
