--- a/public/styles/common/mixins/_gradients.scss
+++ b/public/styles/common/mixins/_gradients.scss
@@ -7,6 +7,14 @@
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#{ie-hex-str($start-color)}', endColorstr='#{ie-hex-str($end-color)}', GradientType=1); // IE9 and down
 }
 
+@mixin gradient-horizontal-three-colors($start-color: #555, $mid-color: #777, $color-stop: 30%,  $end-color: #333) {
+    background-image: -webkit-linear-gradient(left, $start-color, $mid-color $color-stop, $end-color); 
+    background-image: -o-linear-gradient(left, $start-color, $mid-color $color-stop, $end-color);
+    background-image: linear-gradient(to right, $start-color, $mid-color $color-stop, $end-color);
+    background-repeat: repeat-x;
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#{ie-hex-str($start-color)}', endColorstr='#{ie-hex-str($end-color)}', GradientType=1); // IE9 and down
+}
+
 @mixin gradient-vertical($start-color: #555, $end-color: #333, $start-percent: 0%, $end-percent: 100%) {
     background-image: -webkit-linear-gradient(top, $start-color $start-percent, $end-color $end-percent);  // Safari 5.1-6, Chrome 10+
     background-image: -o-linear-gradient(top, $start-color $start-percent, $end-color $end-percent);  // Opera 12
