--- a/public/styles/main.scss
+++ b/public/styles/main.scss
@@ -20,7 +20,10 @@
 // Components CSS
 @import "common/layout";
 @import "common/navs";
+@import "common/dropdown";
+@import "common/form";
 
 // Module CSS
 @import "home/index";
 @import "package/common";
+@import "detail/common";
