--- a/views/detail/image.html
+++ b/views/detail/image.html
@@ -1,1 +1,12 @@
-<h1>图片列表</h1>
+<div class="banner">
+    <img class="banner__img" src="/images/detail/banner-bg.jpg" alt="">
+    <div class="banner__gradient"></div>
+    <div class="banner__desc">
+        <p>
+            佛教雕塑艺术资源包是有服装，学院老师下乡采集佛。教雕塑艺术资源包，是有服装学院老师下乡采集。
+        </p>
+    </div>
+</div>
+<div class="image_lst">
+    asdfsdaf
+</div>
