--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -345,13 +345,13 @@ a {
     text-decoration: none;
     cursor: pointer; }
 
-.clearfix:before, .container:before, .row:before, .nav:before, .navbar:before, .navbar-header:before, .home__txt_content:before, .home_pkg:before, .pkg_menu_row:before, .clearfix:after, .container:after, .row:after, .nav:after, .navbar:after, .navbar-header:after, .home__txt_content:after, .home_pkg:after, .pkg_menu_row:after {
+.clearfix:before, .container:before, .row:before, .nav:before, .navbar:before, .navbar-header:before, .multi_menu__lv2:before, .home__txt_content:before, .home_pkg:before, .pkg_menu_row:before, .clearfix:after, .container:after, .row:after, .nav:after, .navbar:after, .navbar-header:after, .multi_menu__lv2:after, .home__txt_content:after, .home_pkg:after, .pkg_menu_row:after {
   content: "";
   display: table; }
-.clearfix:after, .container:after, .row:after, .nav:after, .navbar:after, .navbar-header:after, .home__txt_content:after, .home_pkg:after, .pkg_menu_row:after {
+.clearfix:after, .container:after, .row:after, .nav:after, .navbar:after, .navbar-header:after, .multi_menu__lv2:after, .home__txt_content:after, .home_pkg:after, .pkg_menu_row:after {
   clear: both; }
 
-.text-inline, .home_pkg__title, .home_pkg__enter, .pkg_menu_pnl__title, .pkg_menu_pnl__enter {
+.text-inline, .multi_menu__lv1 > li > a, .multi_menu__lv2 > li > a, .home_pkg__title, .home_pkg__enter, .pkg_menu_pnl__title, .pkg_menu_pnl__enter {
   display: block;
   white-space: nowrap;
   text-overflow: ellipsis;
@@ -2637,8 +2637,6 @@ p {
 
 .navbar {
   position: relative;
-  min-height: 20px;
-  border-bottom: 1px solid #ebebea;
   border-radius: 0;
   background-color: #fff; }
 
@@ -2662,40 +2660,155 @@ p {
 
 .navbar-brand {
   float: left;
-  margin-right: 15px;
-  padding: 20px 0;
+  margin-right: 0px;
+  padding: 20px 15px;
   line-height: 20px;
   font-size: 20px;
-  font-weight: 700;
-  color: #222; }
+  color: #d52349; }
   .navbar-brand:hover, .navbar-brand:focus {
     text-decoration: none; }
-  .navbar-brand > img {
-    display: block; }
 
 .navbar-nav {
   float: left;
   margin: 0; }
-  .navbar-nav.navbar-right:last-child {
-    margin-right: 0; }
   .navbar-nav > li {
     float: left; }
-    .navbar-nav > li > a {
-      margin: 0 15px;
-      padding: 20px 0;
-      border-bottom: 2px solid transparent;
-      line-height: 20px;
-      text-decoration: none;
-      font-size: 16px;
-      color: #5d5d5d; }
-      .navbar-nav > li > a:hover, .navbar-nav > li > a:active {
-        color: #d52349;
+    .navbar-nav > li:hover {
+      background-color: #f0f0f0; }
+    .navbar-nav > li:hover > a {
+      color: #d52349; }
+  .navbar-nav > li > a {
+    padding: 20px 15px;
+    line-height: 20px;
+    text-decoration: none;
+    font-size: 16px;
+    color: #5d5d5d; }
+
+.navbar_search {
+  display: inline-block; }
+  .navbar_search .form-control-wrapper {
+    margin-top: 15px;
+    margin-left: 30px; }
+  .navbar_search .form-control {
+    padding-right: 30px; }
+  .navbar_search .form-control-icon {
+    right: 10px;
+    left: auto; }
+
+.dropdown {
+  position: relative; }
+  .dropdown.open .dropdown__menu {
+    display: block; }
+  .dropdown__menu {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    z-index: 1010;
+    display: none;
+    font-size: 14px;
+    text-align: left;
+    background-color: #fff;
+    border: 1px solid #ebebea;
+    border-radius: 0 0 4px 4px;
+    overflow: hidden; }
+    .dropdown__menu > li > a {
+      display: block;
+      padding: 8px 10px;
+      clear: both;
+      line-height: 1.42857;
+      white-space: nowrap;
+      color: #d52349; }
+      .dropdown__menu > li > a:hover, .dropdown__menu > li > a:focus {
+        text-decoration: none;
+        color: #222;
+        background-color: #d52349;
         border-bottom-color: #d52349; }
-  .navbar-nav > .active > a, .navbar-nav > .active > a:hover, .navbar-nav > .active > a:active, .navbar-nav > .active > a:focus {
-    color: #d52349;
-    border-bottom-color: #d52349; }
-  .navbar-nav .dropdown-menu {
-    top: 78px; }
+    .dropdown__menu > li:last-child > a {
+      border-bottom: none; }
+  .dropdown__toggle:focus {
+    outline: none; }
+
+.multi_menu {
+  width: 600px;
+  min-height: 100px;
+  max-height: 400px;
+  padding: 10px;
+  overflow-y: auto; }
+  .multi_menu__lv1 > li {
+    position: relative;
+    min-height: 30px;
+    margin-bottom: 5px;
+    padding: 5px 0 5px 120px;
+    border: 1px solid #ebebea; }
+    .multi_menu__lv1 > li:hover {
+      background-color: #fafafa; }
+  .multi_menu__lv1 > li:last-child {
+    margin-bottom: 0; }
+  .multi_menu__lv1 > li > a {
+    position: absolute;
+    top: 5px;
+    left: 5px;
+    width: 110px;
+    text-align: left;
+    color: #222; }
+    .multi_menu__lv1 > li > a:hover {
+      text-decoration: underline;
+      color: #d52349; }
+  .multi_menu__lv2 > li {
+    float: left;
+    margin-right: 5px;
+    margin-bottom: 3px;
+    padding-left: 5px;
+    border-left: 1px solid #ebebea; }
+  .multi_menu__lv2 > li:last-child {
+    padding-right: 5px;
+    border-right: 1px solid #ebebea; }
+  .multi_menu__lv2 > li > a {
+    display: block;
+    max-width: 150px;
+    color: #d52349; }
+    .multi_menu__lv2 > li > a:hover {
+      text-decoration: underline; }
+
+.form-control {
+  display: block;
+  width: 100%;
+  height: 34px;
+  padding: 8px 10px;
+  border: 1px solid #ebebea;
+  border-radius: 4px;
+  line-height: 1.42857;
+  font-size: 14px;
+  color: #444;
+  background-color: #fff;
+  -webkit-transition: border-color ease 0.15s, box-shadow ease 0.15s;
+  -o-transition: border-color ease 0.15s, box-shadow ease 0.15s;
+  transition: border-color ease 0.15s, box-shadow ease 0.15s; }
+  .form-control:focus {
+    border-color: #ebebea;
+    outline: 0;
+    -webkit-box-shadow: inset 0 0 4px rgba(235, 235, 234, 0.6), 0 0 8px rgba(235, 235, 234, 0.6);
+    box-shadow: inset 0 0 4px rgba(235, 235, 234, 0.6), 0 0 8px rgba(235, 235, 234, 0.6); }
+  .form-control::-moz-placeholder {
+    color: #888;
+    opacity: 1; }
+  .form-control:-ms-input-placeholder {
+    color: #888; }
+  .form-control::-webkit-input-placeholder {
+    color: #888; }
+  .form-control:focus + .form-control-icon {
+    color: #353132; }
+
+.form-control-wrapper {
+  position: relative;
+  display: block;
+  width: 100%; }
+
+.form-control-icon {
+  position: absolute;
+  top: 8px;
+  font-size: 16px;
+  color: #5d5d5d; }
 
 .home__wrapper {
   position: fixed;
@@ -3012,5 +3125,46 @@ p {
     font-size: 12px; }
     .pkg_menu_pnl__enter:hover {
       text-decoration: underline; }
+
+.banner {
+  position: relative;
+  height: 250px;
+  overflow: hidden; }
+  .banner:hover .banner__img {
+    -webkit-transform: scale(1.2);
+    -ms-transform: scale(1.2);
+    -o-transform: scale(1.2);
+    transform: scale(1.2); }
+  .banner__gradient {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background-image: -webkit-linear-gradient(left, #130E0F, #690021 70%, rgba(119, 0, 38, 0.24));
+    background-image: -o-linear-gradient(left, #130E0F, #690021 70%, rgba(119, 0, 38, 0.24));
+    background-image: linear-gradient(to right, #130e0f, #690021 70%, rgba(119, 0, 38, 0.24));
+    background-repeat: repeat-x;
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#FF130E0F', endColorstr='#3D770026', GradientType=1); }
+  .banner__img {
+    position: absolute;
+    width: 450px;
+    height: 450px;
+    top: -120px;
+    right: 0;
+    -webkit-transition: all 2s ease;
+    -o-transition: all 2s ease;
+    transition: all 2s ease; }
+  .banner__desc {
+    position: absolute;
+    top: 120px;
+    width: 100%; }
+    .banner__desc p {
+      width: 450px;
+      margin: 0 auto;
+      font-size: 16px;
+      color: #fff; }
+      .banner__desc p:first-letter {
+        font-size: 30px; }
 
 /*# sourceMappingURL=main.css.map */
